--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ html::-webkit-scrollbar-thumb {
 body {
   background: #111111ef;
   overflow-x: hidden;
+  margin: 0;
 }
 section {
   height: 100vh;
@@ -38,11 +39,51 @@ h2 {
 p {
   color: #fff;
 }
+/*  */
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #111;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 50px;
+}
+
+li {
+  float: left;
+}
+li h2 {
+  margin-right: 30px;
+  background: transparent;
+}
+
+li a {
+  display: block;
+  color: #fff;
+  text-align: center;
+  padding: 10px 12px;
+  border-radius: 10px;
+  text-decoration: none;
+}
+li a:hover {
+  background-color: #413f3f9f;
+}
+.active {
+  background-color: #413f3f9f;
+  margin-right: 2px;
+}
+
 /* Home section Start */
 .row {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  padding: 20px;
+  margin-top: 50px;
 }
 
 .half-width {
@@ -310,6 +351,12 @@ hr {
   font-weight: 700;
   font-size: 1rem;
   background: orange;
+  border: none;
+}
+
+.send-btn:hover {
+  background: #111;
+  color: var(--orange);
 }
 
 footer {
